--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbAtividade2
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://dpg-cka5fuldrqvc73bqovpg-a.oregon-postgres.render.com/praticajenkins_waal
+spring.datasource.username=praticajenkins_waal_user
+spring.datasource.password=0dMrZcKbuhhdJM4FB69tSvqRWVGYdkDb
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=8081
